force-app/main/default/objects/Opportunity/fields/Prep_for_Funding_Date__c.field-meta.xml
<CustomField>
    <fullName>Prep_for_Funding_Date__c</fullName>
    <description>Identifies the date the Opportunity was advanced to the Prep for Funding sub-stage in the sales cycle. Set by an automation.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Prep for Funding Date</label>
    <type>Date</type>
</CustomField>