force-app/main/default/objects/Opportunity/fields/Product_Offering__c.field-meta.xml
<CustomField>
    <fullName>Product_Offering__c</fullName>
    <label>Product Offering</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Business_Unit1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assignment</fullName>
            </value>
            <value>
                <fullName>Capital Lease</fullName>
            </value>
            <value>
                <fullName>Co-branded</fullName>
            </value>
            <value>
                <fullName>Cost Per</fullName>
            </value>
            <value>
                <fullName>Financial Solution Leasing</fullName>
            </value>
            <value>
                <fullName>FPPO</fullName>
            </value>
            <value>
                <fullName>Maintenance Financing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Private Label</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Service Only</fullName>
            </value>
            <value>
                <fullName>Subscription Financing</fullName>
            </value>
            <value>
                <fullName>Subsidized</fullName>
            </value>
            <value>
                <fullName>True Lease</fullName>
            </value>
            <value>
                <fullName>Vendor Finance - FL</fullName>
            </value>
            <value>
                <fullName>Vendor Finance - Loan</fullName>
            </value>
            <value>
                <fullName>Vendor Finance - OL</fullName>
            </value>
            <value>
                <fullName>Vendor Finance - Other</fullName>
            </value>
            <value>
                <fullName>Refresh</fullName>
            </value>
            <value>
                <fullName>Expansion</fullName>
            </value>
            <value>
                <fullName>Mac Upgrade</fullName>
            </value>
            <value>
                <fullName>Single Upfront Payment</fullName>
            </value>
            <value>
                <fullName>Guaranteed Buyback</fullName>
            </value>
            <value>
                <fullName>Technology Utilization Agreement</fullName>
            </value>
            <value>
                <fullName>Apple K12-Public Finance</fullName>
            </value>
            <value>
                <fullName>Apple K12 - Taxable</fullName>
            </value>
            <value>
                <fullName>Same-as-cash K12</fullName>
            </value>
            <value>
                <fullName>Higher Education - Public Finance</fullName>
            </value>
            <value>
                <fullName>Education - Mac Guaranteed Buyback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>