force-app/main/default/objects/Opportunity/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates an Opportunity to its Program. The Opportunity&apos;s UNQ_Vendor_Program__c value is used to fetch the corresponding Program record by this external ID common to both objects. Populated by Apex code.</description>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>