force-app/main/default/objects/Opportunity/fields/Program_Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>Program_Agreement_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Program Agreement Signed</label>
    <type>Checkbox</type>
</CustomField>