force-app/main/default/objects/Opportunity/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <label>Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Referral</fullName>
            </value>
            <value>
                <fullName>Private label</fullName>
            </value>
            <value>
                <fullName>Quasi Private label</fullName>
            </value>
            <value>
                <fullName>Assignment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>