force-app/main/default/objects/Opportunity/fields/Property_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Property_Insurance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Property Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>