force-app/main/default/objects/Opportunity/fields/Public_Finance__c.field-meta.xml
<CustomField>
    <fullName>Public_Finance__c</fullName>
    <formula>CONTAINS( Program__r.Name, &quot;PUBLIC FINANCE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Public Finance</label>
    <type>Checkbox</type>
</CustomField>