force-app/main/default/objects/Opportunity/fields/Purchase_Option__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Option__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Purchase Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>