force-app/main/default/objects/Opportunity/fields/Quarter_Number__c.field-meta.xml
<CustomField>
    <fullName>Quarter_Number__c</fullName>
    <description>Quarter based on the Application date</description>
    <formula>CASE(CEILING(MONTH( Application_Date__c)/3),
1,&quot;Q1&quot;,
2,&quot;Q2&quot;,
3,&quot;Q3&quot;,
4,&quot;Q4&quot;,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarter Number</label>
    <type>Text</type>
</CustomField>