force-app/main/default/objects/Opportunity/fields/Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Rate_Type__c</fullName>
    <description>Rate Type</description>
    <label>Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LOW RATE</fullName>
            </value>
            <value>
                <fullName>STANDARD RATE</fullName>
            </value>
            <value>
                <fullName>SPECIAL RATE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>