force-app/main/default/objects/Opportunity/fields/Reason_for_Loss__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Loss__c</fullName>
    <description>Is required if Opp is Closed/Lost AND User.Profile contains Canada</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason for Loss</label>
    <length>55</length>
    <type>Text</type>
</CustomField>