force-app/main/default/objects/Opportunity/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asia Pacific</fullName>
            </value>
            <value>
                <fullName>CEE</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Latin America</fullName>
            </value>
            <value>
                <fullName>Midwest</fullName>
            </value>
            <value>
                <fullName>Nordics</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>Northeast</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>Southeast</fullName>
            </value>
            <value>
                <fullName>West Coast</fullName>
            </value>
            <value>
                <fullName>Western Europe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>