force-app/main/default/objects/Opportunity/fields/Region_Description__c.field-meta.xml
<CustomField>
    <fullName>Region_Description__c</fullName>
    <description>Captures the name of the Opportunity&apos;s related Region_Relationship__c record as a text value. Used in Sharing Rules to permit sharing by Region. Required because sharing rules cannot be written leveraging Lookup field values (i.e. Region_Relationship__c). Populated by Apex code.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Region Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>