force-app/main/default/objects/Opportunity/fields/Region_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Region_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates an Opportunity to its Region. Populated via automation.</description>
    <label>Region</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>