force-app/main/default/objects/Opportunity/fields/Rental_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rental_Amount__c</fullName>
    <businessOwnerUser>mmikael.franzen@dllgroup.com.st01d06</businessOwnerUser>
    <description>It contains the Synced quote rental amount</description>
    <formula>SyncedQuote.Rental_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>It contains the Synced quote rental amount</inlineHelpText>
    <label>Rental Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>