force-app/main/default/objects/Opportunity/fields/Req_Docs_to_Docs_Out__c.field-meta.xml
<CustomField>
    <fullName>Req_Docs_to_Docs_Out__c</fullName>
    <formula>(UNIXTIMESTAMP( Timestamp_Documents_Out__c )-UNIXTIMESTAMP( Timestamp_Documents_Requested__c))/60/60</formula>
    <label>Req Docs to Docs Out (Hrs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>