force-app/main/default/objects/Opportunity/fields/Request_Documents_to_Documents_Out__c.field-meta.xml
<CustomField>
    <fullName>Request_Documents_to_Documents_Out__c</fullName>
    <formula>IF(
Timestamp_Documents_Out__c - Timestamp_Documents_Requested__c&gt; 0 ,
TEXT( FLOOR( Timestamp_Documents_Out__c - Timestamp_Documents_Requested__c) ) &amp; &quot; days &quot;
&amp; TEXT( FLOOR( MOD( (Timestamp_Documents_Out__c - Timestamp_Documents_Requested__c) * 24, 24 ) ) ) &amp; &quot; hours &quot;
&amp; TEXT( ROUND( MOD( (Timestamp_Documents_Out__c - Timestamp_Documents_Requested__c) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot;,
&quot;&quot;
)</formula>
    <label>Request Documents to Documents Out</label>
    <type>Text</type>
</CustomField>