force-app/main/default/objects/Opportunity/fields/Residual_Date__c.field-meta.xml
<CustomField>
    <fullName>Residual_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Residual Date</label>
    <type>Date</type>
</CustomField>