force-app/main/default/objects/Opportunity/fields/Residual_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Residual_Percentage__c</fullName>
    <label>Residual Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>