force-app/main/default/objects/Opportunity/fields/Resubmit_Comments__c.field-meta.xml
<CustomField>
    <fullName>Resubmit_Comments__c</fullName>
    <description>This field is created for DOD Portal. It hold the comment(text value) for resubmitting credit app for Credit app Additional Info feature.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Resubmit Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>