force-app/main/default/objects/Opportunity/fields/Resubmitted__c.field-meta.xml
<CustomField>
    <fullName>Resubmitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The field is created for DOD Portal. It hold the value true if the Application is Resubmitted for Credit App Additional Info Feature. If false, its not yet Resubmitted</description>
    <label>Resubmitted</label>
    <type>Checkbox</type>
</CustomField>