force-app/main/default/objects/Opportunity/fields/Retail_Finance_Manager_Code__c.field-meta.xml
<CustomField>
    <fullName>Retail_Finance_Manager_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Retail Finance Manager Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>