force-app/main/default/objects/Opportunity/fields/Risk_Grade__c.field-meta.xml
<CustomField>
    <fullName>Risk_Grade__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Risk Grade</label>
    <length>3</length>
    <type>Text</type>
</CustomField>