force-app/main/default/objects/Opportunity/fields/Sales_Rep_ID_2__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_ID_2__c</fullName>
    <description>Captures the unique identifier for the Sales Rep 2 individual assigned to an Opportunity. Set via integration. Used to query Salesforce for the User record corresponding to this individual. Related to Opportunity Apex function for Opportunity Owner and Opportunity Team Member insertion.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Sales Rep ID 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>