force-app/main/default/objects/Opportunity/fields/Sales_Rep_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_ID__c</fullName>
    <description>External ID for Sales Rep</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Sales Rep ID</label>
    <length>125</length>
    <type>Text</type>
</CustomField>