force-app/main/default/objects/Opportunity/fields/Sales_Rep_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Name_2__c</fullName>
    <description>Captures the literal name of the Sales Rep 2 individual assigned to an Opportunity. Set via integration. Used in conjunction with the Sales Rep ID 2 field value to query Salesforce for the User record corresponding to this named individual. Related to Opportunity Apex function for Opportunity Owner and Opportunity Team Member insertion.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Rep Name 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>