force-app/main/default/objects/Opportunity/fields/Sales_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Rep Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>