force-app/main/default/objects/Opportunity/fields/Sales_Support_Rep_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Support_Rep_ID__c</fullName>
    <description>This field holds the Sales Support Rep ID value from MOSAIC for Opportunities.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Support Rep ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>