force-app/main/default/objects/Opportunity/fields/Sales_Support_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Support_Rep_Name__c</fullName>
    <description>The field holds the Sales Support Rep Name from MOSAIC for Opportunities.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Support Rep Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>