force-app/main/default/objects/Opportunity/fields/Service_Fee_Total__c.field-meta.xml
<CustomField>
    <fullName>Service_Fee_Total__c</fullName>
    <description>This field is calculated via Flows, based on Line Items entered manually in the DLL on Demand Portal.</description>
    <inlineHelpText>This field is calculated based on individual Asset Line Items entered manually in the DLL on Demand Portal.</inlineHelpText>
    <label>Service Fee Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>