force-app/main/default/objects/Opportunity/fields/Service_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Service_Maintenance__c</fullName>
    <description>NBD</description>
    <label>Service &amp; Maintenance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>To be verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>