force-app/main/default/objects/Opportunity/fields/Servitization_Comments__c.field-meta.xml
<CustomField>
    <fullName>Servitization_Comments__c</fullName>
    <description>NBD</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Servitization Comments</label>
    <type>TextArea</type>
</CustomField>