force-app/main/default/objects/Opportunity/fields/Share_With_Account__c.field-meta.xml
<CustomField>
    <fullName>Share_With_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Share With Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Share With Account)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>