force-app/main/default/objects/Opportunity/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Source System</label>
    <length>125</length>
    <type>Text</type>
</CustomField>