force-app/main/default/objects/Opportunity/fields/Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>Sub_Stage__c</fullName>
    <description>Opportunity sub stages to be used by each BU</description>
    <label>Sub-Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Warm Leads Identified</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Customer Meeting</fullName>
            </value>
            <value>
                <fullName>Executive Endorsement</fullName>
            </value>
            <value>
                <fullName>Nondisclosure Agreement Executed</fullName>
            </value>
            <value>
                <fullName>Required Functional Approvals Complete (Table 1)</fullName>
            </value>
            <value>
                <fullName>Workshop Hosted</fullName>
            </value>
            <value>
                <fullName>Principles Document/Term Sheet Drafted</fullName>
            </value>
            <value>
                <fullName>Required Functional Approvals Complete (Table 2)</fullName>
            </value>
            <value>
                <fullName>Principles Document/Term Sheet Signed</fullName>
            </value>
            <value>
                <fullName>Program Fact Sheet</fullName>
            </value>
            <value>
                <fullName>Development of Offer</fullName>
            </value>
            <value>
                <fullName>Vendor Risk Application</fullName>
            </value>
            <value>
                <fullName>Determine Risk Acceptance Criteria</fullName>
            </value>
            <value>
                <fullName>ABC Assessment</fullName>
            </value>
            <value>
                <fullName>Remarketing Arrangement</fullName>
            </value>
            <value>
                <fullName>Profit &amp; Loss Calculation</fullName>
            </value>
            <value>
                <fullName>Program Agreement Under Review</fullName>
            </value>
            <value>
                <fullName>DLL Selected</fullName>
            </value>
            <value>
                <fullName>Required Functional Approvals Complete (Table 3)</fullName>
            </value>
            <value>
                <fullName>Local Due Diligence &amp; Approval Committee</fullName>
            </value>
            <value>
                <fullName>Global Credit Committee Approval</fullName>
            </value>
            <value>
                <fullName>Determine Vendor Reporting Requirements</fullName>
            </value>
            <value>
                <fullName>Create Rollout Plan (Global)</fullName>
            </value>
            <value>
                <fullName>Implementation Plan (Local)</fullName>
            </value>
            <value>
                <fullName>Agreement Executed</fullName>
            </value>
            <value>
                <fullName>Assigned Local Implementation</fullName>
            </value>
            <value>
                <fullName>MVP Implemented</fullName>
            </value>
            <value>
                <fullName>Quote Draft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>