force-app/main/default/objects/Opportunity/fields/Synced_Quote_Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Synced_Quote_Stage_Name__c</fullName>
    <businessOwnerUser>mmikael.franzen@dllgroup.com.st01d06</businessOwnerUser>
    <description>It is used for kanban settings. it is the synced quote status value. we have created this field because formula fields cannot be used in search. And cannot be translated. Used in reports.</description>
    <inlineHelpText>Synced quote status value</inlineHelpText>
    <label>Stage Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Calculation</fullName>
            </value>
            <value>
                <fullName>Calculation Expired</fullName>
            </value>
            <value>
                <fullName>Assessment</fullName>
            </value>
            <value>
                <fullName>Refer</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Approved With Conditions</fullName>
            </value>
            <value>
                <fullName>Documents Generated</fullName>
            </value>
            <value>
                <fullName>Pending Documentation</fullName>
            </value>
            <value>
                <fullName>Pending Validation</fullName>
            </value>
            <value>
                <fullName>Pending Information</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Funded/Won</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Pending E-Sign</fullName>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Blocked Due To Multiple PG</fullName>
            </value>
            <value>
                <fullName>Review Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>