force-app/main/default/objects/Opportunity/fields/Tax_Exemption_on_File__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exemption_on_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Exemption on File</label>
    <type>Checkbox</type>
</CustomField>