force-app/main/default/objects/Opportunity/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <description>NBD</description>
    <label>Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>