force-app/main/default/objects/Opportunity/fields/Term_Options__c.field-meta.xml
<CustomField>
    <fullName>Term_Options__c</fullName>
    <description>NBD</description>
    <label>Term Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
            <value>
                <fullName>48</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>72</fullName>
            </value>
            <value>
                <fullName>84</fullName>
            </value>
            <value>
                <fullName>96</fullName>
            </value>
            <value>
                <fullName>108</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>