force-app/main/default/objects/Opportunity/fields/Test_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Test_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created to run update on Opp</description>
    <label>Test Checkbox</label>
    <type>Checkbox</type>
</CustomField>