force-app/main/default/objects/Opportunity/fields/Third_Year_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Third_Year_of_Business__c</fullName>
    <formula>CASE(First_Year_of_Business__c, 
&apos;2019&apos;, &apos;2021&apos;, 
&apos;2020&apos;, &apos;2022&apos;,
&apos;2021&apos;, &apos;2023&apos;,
&apos;2022&apos;, &apos;2024&apos;,
&apos;2023&apos;, &apos;2025&apos;,
&apos;2024&apos;, &apos;2026&apos;,
&apos;2025&apos;, &apos;2027&apos;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Third Year of Business</label>
    <type>Text</type>
</CustomField>