force-app/main/default/objects/Opportunity/fields/Timeline_Comments__c.field-meta.xml
<CustomField>
    <fullName>Timeline_Comments__c</fullName>
    <description>NBD</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Timeline Comments</label>
    <type>TextArea</type>
</CustomField>