force-app/main/default/objects/Opportunity/fields/Timestamp_Documents_Requested__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Documents_Requested__c</fullName>
    <description>used to timestamp when sub-stage was updated to &quot;documents requested&quot;, to be populated by flow</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Timestamp: Documents Requested</label>
    <type>DateTime</type>
</CustomField>