force-app/main/default/objects/Opportunity/fields/Total_Contract_Payment__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_Payment__c</fullName>
    <description>For DLL on Demand Portal - Payment Amount (Equipment Payment) + Service Fee Total</description>
    <formula>Payment_Amount__c +  Service_Fee_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Payment Amount + Service Fee Total</inlineHelpText>
    <label>Total Contract Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>