force-app/main/default/objects/Opportunity/fields/Total_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Total_Exposure__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Exposure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>