force-app/main/default/objects/Opportunity/fields/Trade_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Trade_Allowance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Trade Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>