force-app/main/default/objects/Opportunity/fields/UCC_Filing__c.field-meta.xml
<CustomField>
    <fullName>UCC_Filing__c</fullName>
    <defaultValue>0</defaultValue>
    <label>UCC Filing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>