force-app/main/default/objects/Opportunity/fields/UNQ_Customer__c.field-meta.xml
<CustomField>
    <fullName>UNQ_Customer__c</fullName>
    <description>UNQ Customer ID from external system</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>UNQ Customer</label>
    <length>125</length>
    <type>Text</type>
</CustomField>