force-app/main/default/objects/Opportunity/fields/UNQ_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>UNQ_Opportunity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>UNQ Opportunity</label>
    <length>125</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>