force-app/main/default/objects/Opportunity/fields/UNQ_Program__c.field-meta.xml
<CustomField>
    <fullName>UNQ_Program__c</fullName>
    <description>Unique ID for the Opportunity&apos;s Program. Set via integration.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>UNQ Program</label>
    <length>125</length>
    <type>Text</type>
</CustomField>