force-app/main/default/objects/Opportunity/fields/UNQ_Vendor__c.field-meta.xml
<CustomField>
    <fullName>UNQ_Vendor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UNQ_Vendor</label>
    <length>125</length>
    <type>Text</type>
</CustomField>