force-app/main/default/objects/Opportunity/fields/UNQ_Vendor_Program__c.field-meta.xml
<CustomField>
    <fullName>UNQ_Vendor_Program__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UNQ Vendor Program</label>
    <length>125</length>
    <type>Text</type>
</CustomField>