force-app/main/default/objects/Opportunity/fields/Updated_by_System__c.field-meta.xml
<CustomField>
    <fullName>Updated_by_System__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updated by System</label>
    <type>Checkbox</type>
</CustomField>