force-app/main/default/objects/Opportunity/fields/User_Managed_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>User_Managed_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the User has taken an action on the Opportunity to exert manual control over some key attributes of the Opportunity, divorcing updates from the integration</description>
    <label>User-Managed Opportunity</label>
    <type>Checkbox</type>
</CustomField>